Login and Logout

--- a/ecom/ecom/store/templates/about.html
+++ b/ecom/ecom/store/templates/about.html
@@ -1,7 +1,56 @@
 {% extends 'base.html' %}
 {% block content %}
 
-ABOUT ME STUFF
+<!-- Header-->
+<header class="bg-dark py-5">
+    <div class="container px-4 px-lg-5 my-5">
+        <div class="text-center text-white">
+            <h1 class="display-4 fw-bolder">About Us</h1>
+            <p class="lead fw-normal text-white-50 mb-0">Welcome to Eni's furniture shop</p>
+        </div>
+    </div>
+</header>
 
+<div class="container">
+    <div class="row">
+        <center>
+            <div class="col-8">
+                <br/><br/>
+                <p align="justify">
+                Добре дошли в Eni's furniture shop – мястото, където уютът и стилът се срещат, за да направят дома ви специален!
+                <br/><br/>
+                Всичко започна преди 20 години, когато решихме да създадем мебелен магазин, който предлага не само мебели, а и вдъхновение за дома. С времето се утвърдихме като доверен партньор за хиляди клиенти.
+                Голямо разнообразие: от класически до модерни мебели.
+                Високо качество: използваме само внимателно подбрани материали.
+                Персонализирани решения: можем да изработим мебели по поръчка според вашите желания.
+                Бърза доставка и монтаж.
+                <br/><br/>
+                Нашата мисия е да създаваме мебели, които не просто запълват пространство, а създават уют. Вярваме, че качеството, стилът и удобството вървят ръка за ръка.
+                Нашият девиз е "Реалните цени на добрите неща!"
+                <br/><br/>
+                Защо да изберете нас?
+                <br/><br/>
+                В морето от мебелни магазини, ние сме островът на уюта, качеството и доброто обслужване. Ето защо хиляди клиенти ни се доверяват:
+                -Качество без компромиси – използваме само висококачествени материали, които гарантират издръжливост и стил за години напред.
+                <br/><br/>
+                -Уникален дизайн – от класически до модерни мебели, създаваме решения, които пасват на всеки вкус и интериор.
+                <br/><br/>
+                -Персонализирани решения – имате идея за перфектната маса, гардероб или диван? Ние ще я превърнем в реалност!
+                <br/><br/>
+                -Бърза и сигурна доставка – знаем, че не обичате да чакате, затова осигуряваме бърза и надеждна доставка директно до дома ви.
+                <br/><br/>
+                -Конкурентни цени – предлагаме отличен баланс между цена и качество, защото красивият дом не трябва да бъде скъп.
+                <br/><br/>
+                -Обслужване с грижа – нашият екип е винаги готов да помогне с професионален съвет и персонално отношение.
+                <br/><br/>
+                Посетете нашите магазини или разгледайте каталога ни онлайн. Нашият екип е винаги насреща, за да ви помогне да създадете перфектния дом!
+                <br/><br/>
+                Адрес: гр.Якоруда, улица Цар Борис III, No 23
+            </p>
+            <br/><br/>
+            <div>
+        </center>
+    <div>
+</div>
 {% endblock %}     
 
