Product category pages

--- a/ecom/ecom/store/templates/navbar.html
+++ b/ecom/ecom/store/templates/navbar.html
@@ -26,6 +26,9 @@
                         <li><a class="dropdown-item" href="{% url 'category' 'Bedroom' %}">Bedroom</a></li>
                         <li><a class="dropdown-item" href="{% url 'category' 'Living-room' %}">Living room</a></li>
                         <li><a class="dropdown-item" href="{% url 'category' 'Kitchen' %}">Kitchen</a></li>
+                        <li><a class="dropdown-item" href="{% url 'category' 'Entrance hall' %}">Entrance hall</a></li>
+                        <li><a class="dropdown-item" href="{% url 'category' 'Office furniture' %}">Office furniture</a></li>
+
                     </ul>
                 </li>
             </ul>
