--- a/ecom/ecom/cart/templates/cart_summary.html
+++ b/ecom/ecom/cart/templates/cart_summary.html
@@ -51,7 +51,7 @@
                       <div class="row justify-content-center">
                         <div class="col-md-2">Quantity:</div>
                         <div class="col-md-2">
-                        <select class="form-select form-select-sm" id="qty-cart">
+                        <select class="form-select form-select-sm" id="select{{product.id}}">
                             
                         {% for key, value in quantities.items%} 
                             {% if key == product.id|slugify %}
@@ -69,7 +69,8 @@
                       </div>
                       <br/><br/>
                     <a href="{% url 'home' %}" class="btn btn-secondary">Home</a>
-                    
+                    <button type="button" data-index="{{product.id}}"
+                    class="btn btn-secondary update-cart">Update</button>
         
                     </center>
                     </div>
@@ -95,6 +96,37 @@
         <br/><br/>
         {% endif %}
         </div> 
+           
+    
+
+<script>
+$(document).on('click', '.update-cart', function(e){
+    e.preventDefault(); 
+    //grab the product id
+    var productid = $(this).data('index');
+    $.ajax({
+        type: 'POST',
+        url: '{% url "cart_update" %}',
+        data: {
+            product_id: $(this).data('index'),
+            product_qty: $('#select' + productid + ' oprion:selected').text(),
+            csrfmiddlewaretoken: '{{ csrf_token }}',
+            action: 'post'
+        },
+
+        success: function(json){
+            //console.log(json)
+            //document.getElementById("cart_quantity").textContent = json.qty
+            location.reload();
+
+        },
+
+        error: function(xhr, errmsg, err){
+
+        }
         
-        
-{% endblock %}     
+    });
+})
+</script>
+
+{% endblock %} 
