--- a/ecom/ecom/cart/templates/cart_summary.html
+++ b/ecom/ecom/cart/templates/cart_summary.html
@@ -71,6 +71,9 @@
                     <a href="{% url 'home' %}" class="btn btn-secondary">Home</a>
                     <button type="button" data-index="{{product.id}}"
                     class="btn btn-secondary update-cart">Update</button>
+
+                    <button type="button" data-index="{{product.id}}"
+                    class="btn btn-danger delete-product">Remove</button>
         
                     </center>
                     </div>
@@ -100,6 +103,7 @@
     
 
 <script>
+    //Update cart
 $(document).on('click', '.update-cart', function(e){
     e.preventDefault(); 
     //grab the product id
@@ -109,7 +113,35 @@ $(document).on('click', '.update-cart', function(e){
         url: '{% url "cart_update" %}',
         data: {
             product_id: $(this).data('index'),
-            product_qty: $('#select' + productid + ' oprion:selected').text(),
+            product_qty: $('#select' + productid + ' option:selected').text(),
+            csrfmiddlewaretoken: '{{ csrf_token }}',
+            action: 'post'
+        },
+
+        success: function(json){
+            //console.log(json)
+            //document.getElementById("cart_quantity").textContent = json.qty
+            location.reload();
+
+        },
+
+        error: function(xhr, errmsg, err){
+
+        }
+        
+    });
+})
+
+//Delete product
+$(document).on('click', '.delete-product', function(e){
+    e.preventDefault(); 
+    //grab the product id
+    //var productid = $(this).data('index');
+    $.ajax({
+        type: 'POST',
+        url: '{% url "cart_delete" %}',
+        data: {
+            product_id: $(this).data('index'),
             csrfmiddlewaretoken: '{{ csrf_token }}',
             action: 'post'
         },
