--- a/ecom/ecom/cart/templates/cart_summary.html
+++ b/ecom/ecom/cart/templates/cart_summary.html
@@ -83,6 +83,8 @@
                 
 
             {% endfor %}
+            <h3>Total: {{ totals }}лв</h3>
+            <br/><br/><br/><br/>
             {% else %}
             There is nothing in your cart
         <br/><br/>
