--- a/ecom/ecom/cart/templates/cart_summary.html
+++ b/ecom/ecom/cart/templates/cart_summary.html
@@ -123,7 +123,7 @@ $(document).on('click', '.update-cart', function(e){
         success: function(json){
             //console.log(json)
             //document.getElementById("cart_quantity").textContent = json.qty
-            location.reload();
+            location.reload(); //Reloads the pages
 
         },
 
