Added ability to change password

--- a/ecom/ecom/store/templates/update_password.html
+++ b/ecom/ecom/store/templates/update_password.html
@@ -5,8 +5,8 @@
 <header class="bg-dark py-5">
     <div class="container px-4 px-lg-5 my-5">
         <div class="text-center text-white">
-            <h1 class="display-4 fw-bolder">Update profile</h1>
-            <p class="lead fw-normal text-white-50 mb-0">Update user profile</p>
+            <h1 class="display-4 fw-bolder">Update password</h1>
+            <p class="lead fw-normal text-white-50 mb-0">Update user password</p>
         </div>
     </div>
 </header>
@@ -17,19 +17,16 @@
             <div class="col-8">
                 
                 <br/><br/>
-                <form method="POST" action="{% url 'update_user' %}">
+                <form method="POST" action="{% url 'update_password' %}">
                     {% csrf_token %}
 
-                    {{ user_form.as_p }}
+                    {{ form.as_p }}
                     <br/><br/>
                     <button type="submit" class="btn btn-secondary">
-                    Update profile
+                    Update password
                     </button>
-</form>
-<br/><br/>
-<a href="{% url 'update_password' %}" class="btn btn-success">Update password</a>
-
-
+                    
+                  </form>
 
 <br/><br/>
 <br/><br/>
